Fix css issues : font color, alignments

--- a/licensing/css/style.css
+++ b/licensing/css/style.css
@@ -563,7 +563,7 @@ table.borderedFormTable tr {vertical-align: top;}
 .noBorder > tbody > tr > td:nth-child(1) {
 	width: 130px !important;
 	padding-bottom: 20px;
-	padding-left: 20px;
+	padding-left: 1px;
 }
 
 a.newSearch:hover {
@@ -754,6 +754,7 @@ a.showDocuments:before {
 a.showDocuments {
 			text-decoration: none;
 			font-size: 12px;
+			color: white !important;
 }
 
 a.showDocuments:hover {
@@ -770,6 +771,7 @@ a.showExpressions:before {
 a.showExpressions {
 			text-decoration: none;
 			font-size: 12px;
+			color: white !important;
 }
 
 a.showExpressions:hover {
@@ -786,6 +788,7 @@ a.showAttachments:before {
 a.showAttachments {
 			text-decoration: none;
 			font-size: 12px;
+			color: white !important;
 }
 
 a.showAttachments:hover {
@@ -802,6 +805,7 @@ a.showSFXProviders:before {
 a.showSFXProviders {
 	text-decoration: none;
 	font-size: 12px;
+	color: white !important;
 }
 
 /*--- Licensing  Expression Comparison Section Icons ---*/
@@ -1864,9 +1868,11 @@ button:focus{
 
 
 
-div.adminRightHeader{
+span.adminRightHeader{
 	font-size:135%;
 	color:#3D545D;
+	margin-right: 10px;
+
 }
 
 span.adminAdd{
